fix shift

--- a/styles/home.css
+++ b/styles/home.css
@@ -50,6 +50,7 @@
   margin-left: 10px;
   flex-direction: column;
   align-items: center;
+  padding-top: 3px;
 }
 .App-header h3 {
   margin: 5px;
